# qtrobot-service-hub-gateway-ros

./: README.md  requirements.txt
gateway/core/: converters.py  gateway_node.py  rpc_bridge.py  stream_bridge.py
gateway/qtrobot_ros2/: __main__.py  api_list.py  gateway_node.py
gateway/realsense_ros2/: __main__.py  api_list.py  gateway_node.py
qtrobot_interfaces/: CMakeLists.txt  package.xml
qtrobot_interfaces/msg/: AudioFrameRaw.msg  CameraIntrinsics.msg  GestureProgressFrame.msg  ImageFrameRaw.msg  MicEventFrame.msg  MotorInfo.msg  MotorJointError.msg  MotorJointState.msg  MotorJointsCommandFrame.msg  MotorJointsErrorFrame.msg  MotorJointsStateFrame.msg  TtsVoiceInfo.msg
qtrobot_interfaces/srv/: CameraColorIntrinsics.srv  CameraDepthScale.srv  FaceEmotionShow.srv  FaceLook.srv  GestureFilePlay.srv  GesturePlay.srv  GestureRecordStart.srv  GestureRecordStore.srv  MediaAudioBgFilePlay.srv  MediaVideoFgFilePlay.srv  MediaVideoFgStreamCancel.srv  MicrophoneIntTunningSet.srv  MotorCalibSet.srv  MotorList.srv  MotorOn.srv  MotorVelocitySet.srv  SpeakerVolumeGet.srv  SpeakerVolumeSet.srv  TtsDefaultEngineGet.srv  TtsDefaultEngineSet.srv  TtsEngineConfigureGet.srv  TtsEngineConfigureSet.srv  TtsEngineLanguagesGet.srv  TtsEngineSaySsml.srv  TtsEngineSayText.srv  TtsEngineSupportsSsml.srv  TtsEngineVoicesGet.srv  TtsEnginesList.srv
qtrobot_ros2_gateway/: converters.py  gateway_node.py  main.py  rpc_bridge.py  stream_bridge.py
scripts/: ros2_interfaces_generator.py
